--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
-    "pg-promise": "^10.5.8"
+    "mysql": "^2.18.1"
   }
 }
