--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "date-and-time": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.2.0",
+    "uuidv4": "^6.2.0"
   }
 }
