--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "mysql": "^2.18.1",
-    "uuid": "^8.2.0",
-    "uuidv4": "^6.2.0"
+    "uuid": "^8.2.0"
   }
 }
