--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "date-and-time": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.2",
@@ -24,6 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://0.0.0.0:80/",
+  "secure": false,
   "eslintConfig": {
     "extends": "react-app"
   },
